# halo2-zk-email

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config
.github/workflows/: test.yml
benches/: email_verify.rs  recursion.rs  recursion_without_sha2.rs  regex.rs  sha2.rs  sign_verify.rs
build_failed/: app.proof  app.vk  app_evm.proof  public_input.json
build_failed/sols/: EmailVerifier.sol  Halo2Verifier.sol  VerifierBase.sol  VerifierFunc0.sol  VerifierFunc1.sol  VerifierFunc2.sol  VerifierFunc3.sol  VerifierFunc4.sol  VerifierFunc5.sol  VerifierFunc6.sol  VerifierFunc7.sol  VerifierFunc8.sol  VerifierFuncAbst.sol  VerifyingKey.sol  deploy_params.json
build_failed/sols/base64/: VerifierFunc0.sol  VerifierFunc1.sol  VerifierFunc2.sol  VerifierFunc3.sol
build_failed/sols/chars_shift_bodyhash/: VerifierFunc0.sol  VerifierFunc1.sol
build_failed/sols/regex_body/: VerifierFunc0.sol  VerifierFunc1.sol  VerifierFunc2.sol  deploy_params.json
build_failed/sols/regex_bodyhash/: VerifierFunc0.sol  VerifierFunc1.sol  VerifierFunc2.sol
build_failed/sols/regex_header/: VerifierFunc0.sol  VerifierFunc1.sol  VerifierFunc2.sol  VerifierFunc3.sol  VerifierFunc4.sol
build_failed/sols/sha2_body/: VerifierFunc0.sol  VerifierFunc1.sol  VerifierFunc2.sol
build_failed/sols/sha2_body_masked_chars/: VerifierFunc0.sol  VerifierFunc1.sol  VerifierFunc2.sol  deploy_params.json
build_failed/sols/sha2_body_substr_ids/: VerifierFunc1.sol  deploy_params.json
build_failed/sols/sha2_header/: VerifierFunc0.sol  VerifierFunc1.sol  VerifierFunc2.sol
build_failed/sols/sha2_header_masked_chars/: VerifierFunc0.sol  deploy_params.json
build_failed/sols/sha2_header_substr_ids/: VerifierFunc1.sol  VerifierFunc2.sol
build_failed/sols/sign_verify/: VerifierFunc0.sol  VerifierFunc1.sol
build_failed/vks/: 0.vk  1.vk  10.vk  2.vk  3.vk  5.vk  6.vk  7.vk  8.vk  9.vk
configs/: agg_bench.config  app_bench.config  app_recursion_bench.config  app_to_agg.config  bench_agg_email_verify.config  bench_app_email_verify.config  debug.config  decomposed_regex_config.json  default_agg.config  default_app.config  test1_email_verify.config  test2_email_verify.config  test_ex1_email_verify.config  test_ex2_email_verify.config  test_ex3_email_verify.config  verify_circuit.config  wasm_email_verify.config  wasm_verify.config
examples/: demo.eml  email_verify.rs  example_email_verify.config
examples/web-client/: README.md  package.json  setup.bash  tsconfig.json
examples/web-client/public/: bodyhash_allstr.txt  bodyhash_substr_0.txt  demo_wasm.eml  from_allstr.txt  hello_body_allstr.txt  hello_body_substr_0.txt  wasm_email_verify.config
examples/web-client/src/: App.tsx  bench-worker.ts
sols_examples/: VerifierFuncAbst.sol
sols_examples/base64/: VerifierFunc0.sol  VerifierFunc1.sol  VerifierFunc3.sol  deploy_params.json
sols_examples/chars_shift_bodyhash/: VerifierFunc0.sol  VerifierFunc1.sol  deploy_params.json
sols_examples/regex_body/: VerifierFunc1.sol  deploy_params.json
sols_examples/regex_bodyhash/: deploy_params.json
sols_examples/regex_header/: VerifierFunc1.sol  VerifierFunc4.sol  deploy_params.json
sols_examples/sha2_body/: VerifierFunc0.sol
sols_examples/sha2_body_masked_chars/: VerifierFunc0.sol
sols_examples/sha2_body_substr_ids/: VerifierFunc2.sol
sols_examples/sha2_header/: VerifierFunc1.sol
sols_examples/sha2_header_masked_chars/: VerifierFunc1.sol  VerifierFunc2.sol  deploy_params.json
sols_examples/sha2_header_substr_ids/: VerifierFunc0.sol
sols_examples/sign_verify/: VerifierFunc0.sol  deploy_params.json
src/: base64_circuit.rs  chars_shift.rs  cli.rs  config_params.rs  helpers.rs  lib.rs  macros.rs  parse_email.rs  recursion.rs  regex_circuit.rs  regex_sha2.rs  regex_sha2_base64.rs  sha2_circuit.rs  sign_verify.rs  snark_verifier_sdk.rs  utils.rs  wasm.rs
src/eth/: EmailVerifier.abi  EmailVerifier.sol  IHalo2Verifier.abi  IVerifier.sol  VerifierBase.sol  VerifierFunc.sol  VerifierFuncAbst.sol  VerifierFuncBase.sol  VerifierStorageBase.sol  gen_verifier.rs  mod.rs
src/recursion/: mod.rs
src/recursion_and_evm/: mod.rs
src/vrm/: regex.js
src/wtns_commit/: mod.rs  poseidon_circuit.rs
test_data/: Verifier.sol  body_hash_allstr.txt  bodyhash_defs.json  bodyhash_substr_0.txt  date_defs.json  from_substr_0.txt  invalid_test_email1.eml  regex_bh.txt  regex_body_test1.txt  regex_body_test2.txt  regex_body_test_ex1.txt  regex_body_test_ex2.txt  regex_bodyhash.txt  regex_from.txt  regex_header_test1.txt  regex_header_test2.txt  regex_subject.txt  regex_test_lookup.txt  regex_to.txt  regex_tofrom.txt  subject_allstr.txt  subject_substr_0.txt  subject_substr_1.txt  subject_substr_2.txt  substr_body_bench1_1.txt  substr_body_test2_1.txt  substr_body_test2_2.txt  substr_body_test_ex1_1.txt  substr_body_test_ex1_2.txt  substr_body_test_ex1_3.txt  substr_body_test_ex2_1.txt  substr_body_test_ex2_2.txt  substr_body_test_ex2_3.txt  substr_bodyhash.txt  substr_from.txt  substr_header_bench1_2.txt  substr_header_test1_1.txt  substr_header_test2_1.txt  substr_header_test2_2.txt  substr_header_test2_3.txt  (+25 more)
test_email/: testemail.eml
test_regexes/: regex_test_lookup.txt
