[package]
name = "halo2-zk-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.10.6"
rand = "0.8.5"
rsa = { version = "0.6.1", features = ["serde"] }
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git" }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git" }
halo2-dynamic-sha256 = { git = "https://github.com/zkemail/halo2-dynamic-sha256.git", version = "0.1.0", branch = "main" }
halo2-rsa = { git = "https://github.com/zkemail/halo2-rsa.git", version = "0.1.0", branch = "feat/new_bigint" }
halo2-regex = { git = "https://github.com/zkemail/halo2-regex.git", version = "0.1.0", branch = "main" }
# halo2-regex = { path = "../halo2-regex", version = "0.1.0" }
halo2-base64 = { git = "https://github.com/zkemail/halo2-base64.git", version = "0.1.0", branch = "main" }
num-traits = "0.2.15"
base64 = "0.21"
snark-verifier = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.1.0", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
snark-verifier-sdk = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.0.1", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
ark-std = { version = "0.4.0", features = ["print-trace"] }


[dev-dependencies]
# mail-parser = "0.8.2"
# mail-auth = { version = "0.3.0", git = "https://github.com/zkemail/mail-auth.git", branch = "feat/not_async" }
cfdkim = { version = "0.2.6", git = "https://github.com/SoraSuegami/dkim.git" }
# cfdkim = { version = "0.2.6", path = "../dkim" }
mailparse = "0.14"
hex = "0.4.3"
slog = "2.7.0"
criterion = "0.4"
fancy-regex = "0.11.0"

# [[bench]]
# name = "email_verify"
# harness = false

# [[bench]]
# name = "recursion"
# harness = false

[[bench]]
name = "recursion_without_sha2"
harness = false

[patch."https://github.com/axiom-crypto/halo2-lib.git"]
halo2-base = { version = "0.2.2", git = "https://github.com/SoraSuegami/halo2-lib.git" }
halo2-ecc = { version = "0.2.2", git = "https://github.com/SoraSuegami/halo2-lib.git" }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations//halo2.git", tag = "v2023_02_02" }
