[package]
name = "halo2-zk-email"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.10.6"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
# halo2-dynamic-sha256 = { path = "../halo2-dynamic-sha256-1" }
halo2-dynamic-sha256 = { git = "https://github.com/zkemail/halo2-dynamic-sha256.git", version = "0.1.0", branch = "main" }
halo2-rsa = { git = "https://github.com/zkemail/halo2-rsa.git", version = "0.1.0", branch = "main", default-features = false }
# halo2-regex = { path = "../halo2-regex-1", version = "0.1.0" }
halo2-base64 = { git = "https://github.com/zkemail/halo2-base64.git", version = "0.1.0", branch = "feat/main_gate" }
num-traits = "0.2.15"
base64 = "0.21"
# snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", version = "0.1.0", branch = "main" }
# halo2_wrong_ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_02_02", package = "ecc" }

ark-std = { version = "0.4.0", features = ["print-trace"] }
itertools = "0.10.3"
clap = { version = "=4.2.1", features = ["derive"] }
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
slog = "2.7.0"
fancy-regex = "0.11.0"
poseidon = { version = "0.2.0", git = "https://github.com/privacy-scaling-explorations/poseidon.git", rev = "2fb4a2385bada39b50dce12fe50cb80d2fd33476" }
regex-simple = { version = "1", package = "regex" }
hex = "0.4.3"
serde_regex = "1.1.0"
mailparse = "0.14"
thiserror = "1.0.40"
once_cell = "1.18.0"
cfdkim = { version = "0.3.0", git = "https://github.com/SoraSuegami/dkim.git" }
# cfdkim = { version = "0.3.0", path = "../dkim" }
log = "0.4.17"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
halo2-regex = { git = "https://github.com/zkemail/halo2-regex.git", version = "0.1.0" }
# halo2-regex = { path = "../halo2-regex-1", version = "0.1.0" }
ethers = { version = "2.0.8", default_features = false, features = [
    "ethers-solc",
], git = "https://github.com/gakonst/ethers-rs.git", tag = "ethers-v2.0.8" }
snark-verifier = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.1.0", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
snark-verifier-sdk = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.0.1", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
ethereum-types = { version = "0.14", default-features = false, features = [
    "std",
] }
tokio = { version = "1.16", features = [
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "macros",
] }
home = { version = "=0.5.5" }


[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0" }
web-sys = { version = "0.3", features = [
    "Request",
    "Window",
    "Response",
    "Storage",
    "console",
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
halo2-regex = { git = "https://github.com/zkemail/halo2-regex.git", version = "0.1.0", default-features = false }
# halo2-regex = { path = "../halo2-regex-1", version = "0.1.0", default-features = false }
snark-verifier-sdk = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.0.1", branch = "main", default-features = false, features = [
    "halo2-pse",
    "loader_halo2",
] }
# gloo-storage = "0.3.0"
stringreader = "0.1.1"
serde-wasm-bindgen = "0.6.2"
wasm-bindgen-console-logger = "0.1.1"
# indexed_db_futures = "0.4.1"
# reqwasm = { version = "0.5.0", git = "https://github.com/SoraSuegami/reqwasm.git", branch = "master" }

[dev-dependencies]
criterion = { version = "0.3" }
temp-env = "0.3.3"

[[bench]]
name = "email_verify"
harness = false

# [[bench]]
# name = "recursion"
# harness = false


# [patch."https://github.com/axiom-crypto/halo2-lib.git"]
# halo2-base = { version = "0.2.2", default-features = false, features = [
#     "halo2-pse",
#     "display",
# ], git = "https://github.com/axiom-crypto//halo2-lib.git", rev = "9860acc" }
# halo2-ecc = { version = "0.2.2", default-features = false, features = [
#     "halo2-pse",
#     "display",
# ], git = "https://github.com/axiom-crypto//halo2-lib.git", rev = "9860acc" }
# halo2-base = { version = "0.2.2", git = "https://github.com/SoraSuegami/halo2-lib.git" }
# halo2-ecc = { version = "0.2.2", git = "https://github.com/SoraSuegami/halo2-lib.git" }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations//halo2.git", tag = "v2023_02_02" }

[patch.crates-io]
colored = { git = "https://github.com/colored-rs/colored.git", version = "2.0.4", tag = "v2.0.4" }
